fix up course not showing due to Mack's breaking .hide class change

--- a/server/static/sass/_base.scss
+++ b/server/static/sass/_base.scss
@@ -11,6 +11,10 @@
 /*****************************
  * Generic classes
  **************************/
+.hide-initial {
+  display: none;
+}
+
 .hide {
   display: none !important;
 }
